# zero2prod

./: .gitignore  Cargo.toml  configuration.yaml
.github/workflows/: audit.yml  general.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health.rs
