[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path ="src/lib.rs"

# We can only have one library in a project, but we can have multiple binaries
[[bin]]
path ="src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3.1"
serde = {version = "1.0.160", features = ["derive"]}
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
config = "0.13.3"
uuid = { version = "1.3.1", features = ["v4"] }
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dev-dependencies]
reqwest = "0.11.16"
